adding header section coding

--- a/index.html
+++ b/index.html
@@ -10,16 +10,27 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="heade">
          <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#"><button>Hire Me</button></a></li>
-                
+                <li><a class="dark-2" href="#">Portfolio</a></li>
+                <li><a class="dark-2" href="#">Blog</a></li>
+                <li><a href="#"><button class="btn-primary">Hire Me</button></a></li>
             </ul>
          </nav>
+         <div class="bannar">
+            <div class="bannar-content">
+                 <h3 class="dark-2">Hi, I  am</h3>
+                 <h1 class="dark-1">Mary Hardy</h1>
+                 <p class="dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                 <button class="btn-primary">Download CV</button>
+                 <button class="btn-primary">Contact</button>
+            </div>
+            <div class="bannar-image">
+                  <img width="584" height="676" src="./images/hardy.png" alt="No image is found.">
+            </div>
+         </div>
     </header>
     <main>
 
